--- a/src/css/page-nav.css
+++ b/src/css/page-nav.css
@@ -7,7 +7,7 @@
   background-color: transparent;
   transition: background-color 0.2s;
   pointer-events: none;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* page navigation */
@@ -26,8 +26,14 @@
   right: 0;
   top: 0;
   width: 80%;
-  height: 100%;
   background-color: white;
+  height: calc(100vh - 5rem);
+}
+
+@media (min-width: 50rem) {
+  .page-nav {
+    height: 100%;
+  }
 }
 
 .page-nav {
@@ -36,12 +42,14 @@
   transition-delay: 0s, 0.2s;
   pointer-events: all;
   opacity: 0;
+  overflow: auto;
 }
 
 .menu-sub-nav {
   transform: translateX(100%);
   transition: transform 0.2s;
   pointer-events: all;
+  overflow: auto;
 }
 
 .page-nav-darken_toggled {
