--- a/src/css/rewards-page.css
+++ b/src/css/rewards-page.css
@@ -106,6 +106,12 @@
   }
 }
 
+@media (max-height: 25rem) {
+  .page-header-wrapper {
+    position: static;
+  }
+}
+
 /* "Join in the app" sticky */
 
 .page-main {
@@ -126,6 +132,12 @@
   background-color: #1e3932;
   box-shadow: rgba(0 0 0 / 25%) 0 4px 4px;
   padding: 0.5rem 1rem;
+}
+
+@media (max-height: 25rem) {
+  .join-app-sticky-wrapper {
+    position: static;
+  }
 }
 
 .join-app-sticky {
